<resources>
    <string name="app_name">GroupProject</string>
    <!--    Strings in MainActivity-->
    <string name="introTextString">This is Team 5!</string>
    <string name="btnWebServiceString">Web Service</string>
    <string name="btnAboutUsString">About</string>
    <string name="btnSendAStickerString">Send A Sticker</string>
    <!--    Strings in WebServiceActivity-->
    <string name="optional_select_flags_to_blacklist">(Optional) Select flags to filter the results:</string>
    <string name="nsfw">NSFW</string>
    <string name="religious">Religious</string>
    <string name="political">Political</string>
    <string name="racist">Racist</string>
    <string name="getJokesString">Get Jokes</string>
    <string name="responseTimeString">Waiting time: -</string>
    <!--    Strings in IndividualActivity-->
    <string name="categoryString">Category</string>
    <string name="setupString">Setup</string>
    <string name="deliveryString">Delivery</string>
    <!--    Strings in AboutUsActivity-->
    <string name="groupMemberString">This is Team 5!\n\nYanan Dong\nZhuoya Huang\nYuchi Shi\nYusheng Guo\nHua Cong</string>
    <!--    Strings in LoginActivity-->
    <string name="loginReminderString">Please enter your username below to log in.</string>
    <string name="enterUsernameHintString">Username</string>
    <string name="loginString">Login</string>
    <!--    Strings in UserRecyclerView-->
    <string name="username">Username</string>
    <string name="userId">User ID</string>
    <!--    Strings in StickerViewHolder-->
    <string name="timeString">Time</string>
    <string name="textString">Text</string>
    <string name="senderString">Sender</string>
    <string name="title_activity_news_fragment">NewsFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    Strings in HomeActivity-->
    <string name="newsBtnString">News</string>
    <string name="profileBtnString">Profile</string>
    <!--    Strings in ProfileActivity-->
    <string name="profileImageString">Profile Image</string>
    <string name="usernameString">Username</string>
    <string name="nameString">Name</string>
    <string name="ageString">Age</string>
    <string name="emailString">Email</string>
    <string name="gamesString">Games</string>
    <string name="editButtonString">Edit Button</string>
    <string name="postsString">Posts</string>
    <string name="commentsString">Comments</string>
    <!--    Strings in EditProfileActivity-->
    <string name="updateImageString">Upload New Profile Image</string>
    <string name="updateButtonString">Update</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="log_out">Log Out</string>

</resources>