<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSphere.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.codinginflow.bottomnavigationviewexample.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/profileNavigation">

        <ImageView
            android:id="@id/profileImage"
            android:contentDescription="@string/profileImageString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/profileName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            app:layout_constraintBottom_toTopOf="@id/profileAge"/>

        <TextView
            android:id="@id/profileAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileName"
            app:layout_constraintBottom_toTopOf="@id/profileGender" />

        <TextView
            android:id="@id/profileGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileAge"
            app:layout_constraintBottom_toBottomOf="@id/profileGames" />

        <TextView
            android:id="@id/profileGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamesString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileGender"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@id/editButton"
            android:contentDescription="@string/editButtonString"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@android:drawable/ic_menu_edit"
            android:background="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@id/profileNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/profile_navigation"
            android:background="?android:attr/windowBackground"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>